# cpppractice

OldSchoolGame/: CMakeLists.txt  color.h  draw.cpp  draw.h  frame.ppm  framenext_000.ppm  framenext_001.ppm  framenext_002.ppm  framenext_003.ppm  framenext_004.ppm  framenext_005.ppm  framenext_006.ppm  framenext_007.ppm  framenext_008.ppm  framenext_009.ppm  framenext_010.ppm  framenext_011.ppm  framenext_012.ppm  framenext_013.ppm  framenext_014.ppm  framenext_015.ppm  framenext_016.ppm  framenext_017.ppm  framenext_018.ppm  framenext_019.ppm  framenext_020.ppm  framenext_021.ppm  framenext_024.ppm  framenext_026.ppm  framenext_027.ppm  framenext_028.ppm  framenext_029.ppm  framenext_030.ppm  framenext_031.ppm  framenext_032.ppm  framenext_033.ppm  framenext_034.ppm  framenext_035.ppm  framenext_036.ppm  framenext_037.ppm  (+95 more)
OldSchoolGame/frames/: frame_000.ppm  frame_001.ppm  frame_002.ppm  frame_003.ppm  frame_004.ppm  frame_005.ppm  frame_006.ppm  frame_007.ppm  frame_008.ppm  frame_009.ppm  frame_010.ppm  frame_011.ppm  frame_012.ppm  frame_013.ppm  frame_014.ppm  frame_015.ppm  frame_016.ppm  frame_017.ppm  frame_018.ppm  frame_019.ppm  frame_020.ppm  frame_021.ppm  frame_022.ppm  frame_023.ppm  frame_024.ppm  frame_025.ppm  frame_026.ppm  frame_027.ppm  frame_028.ppm  frame_029.ppm  frame_030.ppm  frame_031.ppm  frame_032.ppm  frame_033.ppm  frame_034.ppm  frame_035.ppm  frame_036.ppm  frame_037.ppm  frame_038.ppm  frame_039.ppm  (+80 more)
OldSchoolGame/frames_tex/: frametex_000.ppm  frametex_001.ppm  frametex_002.ppm  frametex_003.ppm  frametex_004.ppm  frametex_005.ppm  (+112 more)
(+147 files in other folders)
